# lollypop-portal

./: .gitignore  README.md  compile.sh  lollypop-portal.in  meson.build  org.gnome.Lollypop.Portal.service.in
